	  where <sn> is your screen name. If for some reason, you log
          into the AOL server and the buddy list comes back empty, we
	  check for a cache file, and, if we find one, read it in. This
          essentially implements recovery from a server crash at AOL
	  (AOL does not back up machines that contain TOC-based buddy
	  lists, unfortunately).  (Thanks Syd)
	* Font selection dialog 
	* Small changes to the Oscar/libfaim stuff (it works now, sort of)

version 0.9.15: (05/06/2000)
	* Plugin support enabled by default (oops)
	* Some plugins built/installed by default
	* Option to automagically check for new releases
	* Ability to receive files (one-way file transfer)
	* In-line spell checker (thanks to Torrey Searle of the
	  Everybuddy Devel team for this one)

version 0.9.14:
	* Numerous Fixes by G. Sumner Hayes (buffer over flow patches,
	  etc)
	* Paned Conversation Windows (Thanks Syd)
	* Raise Window On Message Received, Fixed (Thanks Syd)
	* When multiple screen names, Gaim now correctly remembers the name
	  that was used last.
	* FONT sizes now work correctly.
	* PLUGIN SUPPORT!! (Lots of cool goodies here)
	* Fixed another leak or two
	* Added ability to change your screenname password
	* Devil pixmaps

version 0.9.13 (03/27/2000):
	* Dialog Box Segfault Fixed (When You Click A Toggle Then Cancel)
	* Double Log-Out Message Fixed
	* GNOME compile error fixed
	* Away Message Problem Fixed
	* Fixed URL Right Click Menus
	* Conversation Loggin now shows Full Date and Time
	* Internal Change to Buddy List
 
version 0.9.12 (03/25/2000):
	* Segfault fix for PPC/Alpha/etc machines with log(0)
	  Thanks to Todd Cohen for this one.
	* Small internal change to the way prefs work
	* GNOME Applet support works better
	  (thanks to Eric Warmenhoven for the patch)
	* Support for displaying true type fonts
	* Lag-O-Meter does not send lag-test if not selected 
	* Fixed problem with saving away messages which contain spaces
	  and numbers.